...
    }, floatingActionButton = {
        FloatingActionButton(
            onClick = { viewModel.onEvent(DetailEvent.HabitSave) },
            containerColor = MaterialTheme.colorScheme.primary,
            shape = CircleShape,
            modifier = Modifier.semantics {
                contentDescription = "Create Habit button"
            }
        ) {
            Icon(
                imageVector = Icons.Default.Check,
                contentDescription = "Create Habit",
                tint = MaterialTheme.colorScheme.tertiary
...
                .padding(horizontal = 20.dp)
        ) {
            HabitTextField(
                value = state.habitName,
                onValueChange = { viewModel.onEvent(DetailEvent.NameChange(it)) },
                placeholder = "New Habit",
                contentDescription = "Enter habit name",
                backgroundColor = Color.White,
                keyboardOptions = KeyboardOptions(
                    autoCorrect = false,
                    imeAction = ImeAction.Done
                ),
                keyboardActions = KeyboardActions(
...
