...
) {
    val state = viewModel.state

    Scaffold(modifier = Modifier.fillMaxSize(), topBar = {
        CenterAlignedTopAppBar(
            title = {
                Text(text = "Home")
            }, navigationIcon = {
                IconButton(onClick = onSettings) {
                    Icon(imageVector = Icons.Default.Settings, contentDescription = "settings")
                }
            })
    }, floatingActionButton = {
        FloatingActionButton(
            onClick = onNewHabit,
            containerColor = MaterialTheme.colorScheme.primary,
            shape = CircleShape,
            modifier = Modifier.semantics {
                contentDescription = "Add a new habit"
            }
        ) {
            Icon(
                imageVector = Icons.Default.Add,
                contentDescription = "Create Habit",
                tint = MaterialTheme.colorScheme.tertiary
...
