...
                    .padding(bottom = 16.dp),
                color = MaterialTheme.colorScheme.background,
            )
            HabitTextField(
                value = state.email,
                onValueChange = { onEvent(LoginEvent.EmailChange(it)) },
                placeholder = "Email",
                contentDescription = "Enter Email",
                modifier = Modifier
                    .fillMaxWidth()
                    .padding(bottom = 6.dp, start = 20.dp, end = 20.dp),
                leadingIcon = Icons.Outlined.Email,
                keyboardOptions = KeyboardOptions(
...
                keyboardActions = KeyboardActions(onAny = {
                    focusManager.clearFocus()
                    onEvent(LoginEvent.Login)
                })
            )
            HabitButton(
                text = "Login",
                modifier = Modifier
                    .fillMaxWidth()
                    .padding(horizontal = 20.dp),
                isEnabled = !state.isLoading,
                onClick = {
                    onEvent(LoginEvent.Login)
...
