...
                .padding(bottom = 64.dp, start = 16.dp, end = 16.dp)
        ) {
            if (pagerState.currentPage == pages.lastIndex) {
                HabitButton(text = "Get Started", onClick = onFinish)
            } else {
                TextButton(onClick = onFinish) {
                    Text(text = "Skip", color = MaterialTheme.colorScheme.tertiary)
                }
                HorizontalPagerIndicator(
                    pagerState = pagerState,
                    activeColor = MaterialTheme.colorScheme.tertiary,
                    inactiveColor = MaterialTheme.colorScheme.primary,
                )
...
